--- a/env.example
+++ b/env.example
@@ -3,3 +3,7 @@ DATABASE_MONGO_URI=""
 SECRET_KEY="aqui un secreto"
 WTF_CSRF_SECRET_KEY="aquí otro secreto"
 EMAIL_USER= "user@mail.email.com"
+JWT_COOKIE_SECURE: = True
+JWT_SECRET_KEY: = "aquí un tercer secreto"
+
+
