--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.3
 cryptography==37.0.4
 cssselect==1.1.0
 cssutils==2.5.1
+dkimpy==1.0.5
 dnspython==2.2.1
 email-validator==1.2.1
 Flask==2.2.1
@@ -39,7 +40,7 @@ requests==2.28.1
 SecretStorage==3.3.3
 six==1.16.0
 smmap==5.0.0
-typing-extensions==4.3.0
+typing_extensions==4.3.0
 urllib3==1.26.11
 Werkzeug==2.2.1
 WTForms==3.0.1
