--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+black==22.6.0
 bson==0.5.10
 cachetools==5.2.0
 certifi==2022.6.15
@@ -28,6 +29,9 @@ keyring==23.8.2
 lxml==4.9.1
 Markdown==3.4.1
 MarkupSafe==2.1.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.5.2
 premailer==3.10.0
 pycparser==2.21
 pydantic==1.9.1
@@ -40,6 +44,8 @@ requests==2.28.1
 SecretStorage==3.3.3
 six==1.16.0
 smmap==5.0.0
+tomli==2.0.1
+tqdm==4.64.0
 typing_extensions==4.3.0
 urllib3==1.26.11
 Werkzeug==2.2.1
