--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.6.0
 black==22.6.0
 bson==0.5.10
 cachetools==5.2.0
@@ -20,6 +21,7 @@ Flask-PyMongo==2.3.0
 Flask-WTF==1.0.1
 gitdb==4.0.9
 GitPython==3.1.27
+humanize==4.8.0
 idna==3.3
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
@@ -34,10 +36,11 @@ pathspec==0.9.0
 platformdirs==2.5.2
 premailer==3.10.0
 pycparser==2.21
-pydantic==1.9.1
-pydantic-mongo==0.1.2
+pydantic==2.6.1
+pydantic-mongo==2.1.0
+pydantic_core==2.16.2
 PyJWT==2.4.0
-pymongo==3.12.3
+pymongo==4.6.1
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 requests==2.28.1
@@ -46,7 +49,7 @@ six==1.16.0
 smmap==5.0.0
 tomli==2.0.1
 tqdm==4.64.0
-typing_extensions==4.3.0
+typing_extensions==4.9.0
 urllib3==1.26.11
 Werkzeug==2.2.1
 WTForms==3.0.1
